@startuml

class Platform

class HostPlatform
class DevicePlatform

class Memory

class HostMemory
class DeviceMemory

class Allocator 

class HostAllocator
class PinnedAllocator
class DeviceAllocator
class UnifiedAllocator

class Arena 

class Pointer

class Value

Platform <|-- HostPlatform
Platform <|-- DevicePlatform

HostPlatform *-- HostMemory

DevicePlatform *-- DeviceMemory

Memory <|-- HostMemory
Memory <|-- DeviceMemory

Memory --> Platform

HostMemory *-- HostAllocator
HostMemory *-- PinnedAllocator

DeviceMemory *-- DeviceAllocator
DeviceMemory *-- UnifiedAllocator


Allocator <|-- HostAllocator
Allocator <|-- PinnedAllocator
Allocator <|-- DeviceAllocator
Allocator <|-- UnifiedAllocator

Allocator *-- Arena
Allocator --> Memory

Arena *-- Pointer
Arena --> Allocator

Pointer *-- Value
Pointer --> Arena

@enduml
